# allie-v2

./: .gitignore  .gitmodules  CLAUDE.md  README.md  export.sh  pyproject.toml
Megatron-LM/: setup.py
apex/: setup.py
configs/: llama-3-1B-57B.json  llama-3-1b-adamw.json  llama-3-3B-57B.json  llama-tiny-muon.json  qwen3-0.6B.json
data/: chess_parquets_shuffled.txt
picotron/: .gitignore  CITATION.cff  LICENSE  README.md  create_config.py  export_to_hf.py  extract_metrics.py  requirements.txt  setup.py  submit_slurm_jobs.py  train.py
results/: arch_ablation_results.json  data_quality_ablation.json  derisk_results.json  derisk_results_r2.json  derisk_results_r3.json  derisk_results_r4.json  derisk_results_r5.json  elo_eval_200M_v2b.json  elo_eval_57M.json  elo_eval_chess_v2_1.7b.json  lr_ablation_results.json  mcts_engine_mix_own_probe_sf1.json  mcts_engine_mix_sf1.json  mcts_engine_mix_sf1_200sim.json  mcts_engine_mix_sf3.json  mcts_engine_mix_sf5.json  mcts_eval_200M_sf1.json  mcts_eval_200M_sf1_100sim.json  mcts_eval_200M_sf1_200sim.json  mcts_eval_200M_sf3_50sim.json  mcts_eval_v2_sf1.json  mcts_fixed_sf1_200sim.json  mcts_fixed_sf1_50sim.json  mcts_fixed_sf3_50sim.json  mcts_ft_value_sf1.json  mcts_joint_pt_sf1.json  mcts_joint_pt_v2_sf1.json  mcts_joint_value_sf1.json  mcts_sf3_100sim.json  mcts_sf3_50sim.json  mcts_sf_oracle_50sim.json  mcts_sf_oracle_sf10.json  mcts_sf_oracle_sf3.json  mcts_sf_oracle_sf5.json  mcts_sf_oracle_sf5_200sim.json  mcts_v3_sf1.json  mcts_v3_sf3.json  mcts_v3probe_sf1.json  mcts_verify.json  medium_run_results.json  (+41 more)
scripts/: add_eval_tokens.py  alphazero_selfplay.py  apex.sh  az_v3_mixed.py  derisk.sh  eval_400m.sh  expert_iteration.py  export_to_hf.py  fast_pack_npy.py  finetune_nl_chess.py  fix.sh  g-tunnel.sh  gen_stockfish_games.py  lichess.sh  lr_sweep_200m.py  monitor_loop.py  pack_derisk_data.sh  train.sh  (+21 more)
(+342 files in other folders)
